// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translate3D renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: translate3d(0);
  -ms-transform: translate3d(0);
  transform: translate3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(0);
  -ms-transform: translate3d(0);
  transform: translate3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(0);
  -ms-transform: translate3d(0);
  transform: translate3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(0);
  -ms-transform: translate3d(0);
  transform: translate3d(0);
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: translate3d(hasnot);
  -ms-transform: translate3d(hasnot);
  transform: translate3d(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(has);
  -ms-transform: translate3d(has);
  transform: translate3d(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(hasnot);
  -ms-transform: translate3d(hasnot);
  transform: translate3d(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(has);
  -ms-transform: translate3d(has);
  transform: translate3d(has);
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: translate3d(invalid.path.1);
  -ms-transform: translate3d(invalid.path.1);
  transform: translate3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(invalid.path.1);
  -ms-transform: translate3d(invalid.path.1);
  transform: translate3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(invalid.path.1);
  -ms-transform: translate3d(invalid.path.1);
  transform: translate3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(invalid.path.1);
  -ms-transform: translate3d(invalid.path.1);
  transform: translate3d(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: translate3d(-54881);
  -ms-transform: translate3d(-54881);
  transform: translate3d(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(-54881);
  -ms-transform: translate3d(-54881);
  transform: translate3d(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(-42365);
  -ms-transform: translate3d(-42365);
  transform: translate3d(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(-42365);
  -ms-transform: translate3d(-42365);
  transform: translate3d(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(July);
    -ms-transform: translate3d(July);
    transform: translate3d(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(August);
    -ms-transform: translate3d(August);
    transform: translate3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(September);
    -ms-transform: translate3d(September);
    transform: translate3d(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translate3d(November);
    -ms-transform: translate3d(November);
    transform: translate3d(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(July);
    -ms-transform: translate3d(July);
    transform: translate3d(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(August);
    -ms-transform: translate3d(August);
    transform: translate3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(September);
    -ms-transform: translate3d(September);
    transform: translate3d(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translate3d(November);
    -ms-transform: translate3d(November);
    transform: translate3d(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(May);
    -ms-transform: translate3d(May);
    transform: translate3d(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(June);
    -ms-transform: translate3d(June);
    transform: translate3d(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(April);
    -ms-transform: translate3d(April);
    transform: translate3d(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translate3d(November);
    -ms-transform: translate3d(November);
    transform: translate3d(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(May);
    -ms-transform: translate3d(May);
    transform: translate3d(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(June);
    -ms-transform: translate3d(June);
    transform: translate3d(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translate3d(April);
    -ms-transform: translate3d(April);
    transform: translate3d(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translate3d(November);
    -ms-transform: translate3d(November);
    transform: translate3d(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: translate3d(July);
    -ms-transform: translate3d(July);
    transform: translate3d(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(August);
    -ms-transform: translate3d(August);
    transform: translate3d(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: translate3d(September);
    -ms-transform: translate3d(September);
    transform: translate3d(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(November);
    -ms-transform: translate3d(November);
    transform: translate3d(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: translate3d(August);
    -ms-transform: translate3d(August);
    transform: translate3d(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: translate3d(July);
    -ms-transform: translate3d(July);
    transform: translate3d(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(August);
    -ms-transform: translate3d(August);
    transform: translate3d(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: translate3d(September);
    -ms-transform: translate3d(September);
    transform: translate3d(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(November);
    -ms-transform: translate3d(November);
    transform: translate3d(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: translate3d(August);
    -ms-transform: translate3d(August);
    transform: translate3d(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translate3d(January);
    -ms-transform: translate3d(January);
    transform: translate3d(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(December);
    -ms-transform: translate3d(December);
    transform: translate3d(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: translate3d(April);
    -ms-transform: translate3d(April);
    transform: translate3d(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(May);
    -ms-transform: translate3d(May);
    transform: translate3d(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: translate3d(June);
    -ms-transform: translate3d(June);
    transform: translate3d(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translate3d(January);
    -ms-transform: translate3d(January);
    transform: translate3d(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(December);
    -ms-transform: translate3d(December);
    transform: translate3d(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: translate3d(April);
    -ms-transform: translate3d(April);
    transform: translate3d(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: translate3d(May);
    -ms-transform: translate3d(May);
    transform: translate3d(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: translate3d(June);
    -ms-transform: translate3d(June);
    transform: translate3d(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: translate3d(54881);
  -ms-transform: translate3d(54881);
  transform: translate3d(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(54881);
  -ms-transform: translate3d(54881);
  transform: translate3d(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(42365);
  -ms-transform: translate3d(42365);
  transform: translate3d(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(42365);
  -ms-transform: translate3d(42365);
  transform: translate3d(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: translate3d(July);
  -ms-transform: translate3d(July);
  transform: translate3d(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(July);
  -ms-transform: translate3d(July);
  transform: translate3d(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(June);
  -ms-transform: translate3d(June);
  transform: translate3d(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(June);
  -ms-transform: translate3d(June);
  transform: translate3d(June);
}

<div
    className="c0"
  />,
]
`;

exports[`translate3D renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: translate3d(DarkSlateBlue);
  -ms-transform: translate3d(DarkSlateBlue);
  transform: translate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(DarkSlateBlue);
  -ms-transform: translate3d(DarkSlateBlue);
  transform: translate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(DarkSlateBlue);
  -ms-transform: translate3d(DarkSlateBlue);
  transform: translate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translate3d(DarkSlateBlue);
  -ms-transform: translate3d(DarkSlateBlue);
  transform: translate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
